# iris_inference_api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_all.txt  requirements_dev.txt
.github/workflows/: build_docker  build_docker.yml
model_artifacts/: logreg.joblib  xgb.joblib
src/iris_inference_api/: batch_async_client.py  main.py  main_old.py  model_loader.py  schemas.py
src/iris_inference_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py
